initial fix desktop portfolio item text too close

--- a/app/_components/components.module.css
+++ b/app/_components/components.module.css
@@ -54,8 +54,9 @@ expands the portfolio item when clicked
 /* .portfolioImageDefault {
 
 } */
-.itemSmallText > h1 {
-    max-height: 50%;
+.itemSmallText {
+    display: flex;
+    flex-direction: column;
 }
 
 /* clases related to an expanded portfolio item */
